# say-play

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
agents/: __init__.py  async_team.py  base.py  factory.py  prompts.py  registry.py  spotify_verifier.py  team.py
agents/schemas/: schemas.py
app/: config.py  main.py
app/controllers/: playlists_controller.py  spotify_controller.py  users_controller.py
app/db/: mongo.py
app/models/: playlist_schemas.py  user_schemas.py
app/models/repositories/: playlists_repo.py  prompts_repo.py  users_repo.py
app/routes/: __init__.py  playlists_routes.py  spotify_routes.py  user_routes.py
app/services/: auth_service.py  dependencies.py  playlist_generation_service.py  spotify_http.py  spotify_oauth_service.py  spotify_playlist_service.py  user_service.py
tests/: smoke_tests.sh
