[project]
name = "ai-playlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.7",
    "aiohttp>=3.13.3",
    "bcrypt<=4.0.0",
    "dnspython>=2.8.0",
    "fastapi[standard]>=0.116.1",
    "motor>=3.7.1",
    "openai>=1.99.1",
    "passlib>=1.7.4",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "shortuuid>=1.0.13",
    "speechrecognition>=3.14.3",
    "spotipy>=2.25.1",
    "uvicorn>=0.41.0",
]
